feat: add scripts
