# config/docs/openapi-spec.yaml
@@ -51,7 +51,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserInput'
+              $ref: '#/components/schemas/IdOutput'
       responses:
         200:
           description: OK
@@ -144,7 +144,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -183,7 +183,187 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/BoolOutput'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+
+  /userRole/users/{userID}:
+    get:
+      operationId: getUserRoles
+      tags:
+        - User Role
+      summary: User with Role list
+      description: Esta operación permite listar todos los user with role.
+      parameters:
+        - name: userID
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserRoles'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+  /userRole/user/{userId}/role/{roleId}:
+    get:
+      operationId: getUser
+      tags:
+        - User Role
+      summary: User Role list
+      description: Esta operación permite listar un user role.
+      parameters:
+        - name: userId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - name: roleId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserRole'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+    post:
+      operationId: assignmentUser
+      tags:
+        - User Role
+      summary: User Role update
+      description: Esta operación permite actualizar un user role.
+      parameters:
+        - name: userId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - name: roleId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IdOutput'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+    delete:
+      operationId: deleteUser
+      tags:
+        - User Role
+      summary: User delete
+      description: Esta operación permite eliminar un user role.
+      parameters:
+        - name: userId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - name: roleId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -254,7 +434,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Roles'
+                $ref: '#/components/schemas/IdOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -294,7 +474,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Role'
+                $ref: '#/components/schemas/IdOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -340,7 +520,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Role'
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -379,7 +559,209 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Role'
+                $ref: '#/components/schemas/BoolOutput'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+
+  /roleView:
+    get:
+      operationId: getRoleView
+      tags:
+        - Role View
+      summary: role with view list
+      description: Esta operación permite listar todos los role with view.
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RoleViews'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+    post:
+      operationId: assignmentRoleView
+      tags:
+        - Role View
+      summary: User Role update
+      description: Esta operación permite actualizar un user role.
+      requestBody:
+        description: Cuerpo del mensaje para crear el role view.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RoleViewInput'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IdOutput'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+    put:
+      operationId: updateRoleView
+      tags:
+        - Role View
+      summary: RoleView update
+      description: Esta operación permite actualizar un role view.
+      requestBody:
+        description: Cuerpo del mensaje para actualizar el role view.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RoleViewInput'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BoolOutput'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+  /roleView/role/{roleID}/view/{viewID}:
+    get:
+      operationId: getUser
+      tags:
+        - Role View
+      summary: User Role list
+      description: Esta operación permite listar un user role.
+      parameters:
+        - name: roleId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - name: viewID
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserRole'
+        400:
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        422:
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntity'
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+    delete:
+      operationId: deleteUser
+      tags:
+        - Role View
+      summary: User delete
+      description: Esta operación permite eliminar un user role.
+      parameters:
+        - name: roleId
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - name: viewID
+          in: path
+          example: 29995f0a-44c1-4a89-91e4-8529927957d9
+          schema:
+            type: string
+            format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -450,7 +832,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Modules'
+                $ref: '#/components/schemas/IdOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -536,7 +918,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Module'
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -575,7 +957,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Module'
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -646,7 +1028,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Views'
+                $ref: '#/components/schemas/IdOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -732,7 +1114,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/View'
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -771,7 +1153,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/View'
+                $ref: '#/components/schemas/BoolOutput'
         400:
           description: BAD_REQUEST
           content:
@@ -889,6 +1271,30 @@ components:
       items:
         $ref: '#/components/schemas/Module'
 
+    UserRole:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+        role:
+          $ref: '#/components/schemas/Role'
+    UserRoleInput:
+      type: object
+      properties:
+        userID:
+          type: string
+          example: "29995f0a-44c1-4a89-91e4-8529927957d9"
+          description: id del user.
+        roleID:
+          type: string
+          example: "29995f0a-44c1-4a89-91e4-8529927957d9"
+          description: id del role.
+    UserRoles:
+      type: array
+      description: Lista de modulos.
+      items:
+        $ref: '#/components/schemas/UserRole'
+
     Role:
       type: object
       properties:
@@ -928,6 +1334,46 @@ components:
       description: Lista de modulos.
       items:
         $ref: '#/components/schemas/Role'
+
+    RoleView:
+      type: object
+      properties:
+        role:
+          $ref: '#/components/schemas/Role'
+        view:
+          $ref: '#/components/schemas/View'
+        viewOrder:
+          type: string
+          example: "viewOrder"
+          description: viewOrder.
+        viewPosition:
+          type: string
+          example: "viewPosition"
+          description: viewPosition del view.
+    RoleViewInput:
+      type: object
+      properties:
+        roleID:
+          type: string
+          example: "29995f0a-44c1-4a89-91e4-8529927957d9"
+          description: id del role.
+        viewID:
+          type: string
+          example: "29995f0a-44c1-4a89-91e4-8529927957d9"
+          description: id de view.
+        viewOrder:
+          type: string
+          example: "viewOrder"
+          description: viewOrder.
+        viewPosition:
+          type: string
+          example: "viewPosition"
+          description: viewPosition del view.
+    RoleViews:
+      type: array
+      description: Lista de modulos.
+      items:
+        $ref: '#/components/schemas/UserRole'
 
     View:
       type: object
@@ -978,6 +1424,22 @@ components:
       description: Lista de views.
       items:
         $ref: '#/components/schemas/View'
+
+    IdOutput:
+      type: object
+      properties:
+        id:
+          type: string
+          example: "29995f0a-44c1-4a89-91e4-8529927957d9"
+          description: ID.
+
+    BoolOutput:
+      type: object
+      properties:
+        id:
+          type: boolean
+          example: true
+          description: boolean response.
 
     UnexpectedError:
       type: object
